--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://andrewbernauer.com/"
 languageCode = "en-us"
 title = "A Hugo website"
 theme = "hugo-lithium"
-googleAnalytics = ""
+googleAnalytics = "UA-154445441-1"
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
@@ -25,7 +25,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
-    highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
+    highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs" 
     highlightjsLang = ["r", "yaml"]
     highlightjsTheme = "github"
 
